@@ -10,6 +10,12 @@ What's New in Python 2.6 beta 2?
 Core and Builtins
 -----------------
 
+- Issue #3221: Issue a RuntimeWarning instead of raising SystemError if
+  the parent module cannot be found while performing an absolute import.
+  This means that an incorrectly defined __package__ attribute will
+  now only prevent relative imports in that module rather than causing
+  all imports from that module to fail.
+
 - Issue #2517: Allow unicode messages in Exceptions again by correctly
   bypassing the instance dictionary when looking up __unicode__ on
   new-style classes.
